# paperbee

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  app.py  daily_posting.py  manifest.json  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml
docs/: index.md
files/: config.yml  config_template.yml  filtering_prompt.txt  query.txt  query_biorxiv.txt  query_pubmed_arxiv.txt
listeners/commands/: __init__.py  search_articles_command.py
listeners/messages/: sample_message.py
paper/: paper.bib  paper.md
papers/: __init__.py  cli.py  config.py  google_sheet.py  llm_filtering.py  papers_finder.py  slack_papers_formatter.py  telegram_papers_formatter.py  utils.py
src/: demo_mattermost.py
src/PaperBee/: daily_posting.py
src/PaperBee/papers/: __init__.py  cli.py  google_sheet.py  llm_filtering.py  mattermost_papers_formatter.py  papers_finder.py  slack_papers_formatter.py  telegram_papers_formatter.py  utils.py  validate_inputs.py  zulip_papers_formatter.py
src/PapersBee/: app.py  app_oauth.py  daily_posting.py
src/PapersBee/listeners/: __init__.py
src/PapersBee/listeners/actions/: __init__.py  sample_action.py
src/PapersBee/listeners/commands/: __init__.py  search_articles_command.py
src/PapersBee/listeners/events/: app_home_opened.py
src/PapersBee/listeners/messages/: __init__.py  sample_message.py
src/PapersBee/listeners/shortcuts/: __init__.py  sample_shortcut.py
src/PapersBee/listeners/views/: __init__.py  sample_view.py
src/PapersBee/papers/: __init__.py  config.py  google_sheet.py  llm_filtering.py  papers_finder.py  posting_required_params.py  slack_papers_formatter.py  utils.py  validate_inputs.py  zulip_papers_formatter.py
tests/: patch_editor.py  sample_papers.py  test_internet.py  test_mattermost.py  test_posting.py  test_slack.py  test_telegram.py
